@@ -89,3 +89,5 @@ usb 0x06bd 0x208f
 # Agfa Snapscan e52
 usb 0x06bd 0x20fd
 
+# Epson Perfection 660
+usb 0x04b8 0x0114
